# django-based-user

./: .gitignore  README.md  pyproject.toml
based_user/: models.py
test/: models.py  settings.py  test_models.py  urls.py
