[tool.poetry]
name = "django-based-user"
version = "0.1.0"
description = "A more based base user model for Django."
authors = ["Luke Hogan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
