[tool.poetry]
name = "django-based-user"
version = "0.1.0"
description = "A more based base user model for Django."
authors = ["Luke Hogan"]
license = "MIT"
readme = "README.md"
packages = [{include = "based_user"}]


[tool.poetry.dependencies]
python = ">=3.9"
django = ">=4.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
